--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "v-mask": "^2.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.10.8",
     "vue-sweetalert2": "^3.0.6",
     "vuelidate": "^0.7.5",
     "vuex": "^3.4.0"
